Track large files with Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 C:/Users/parth/OneDrive/Desktop/InClass[[:space:]]-[[:space:]]Copy/node_modules filter=lfs diff=lfs merge=lfs -text
 node_modules/electron/dist/electron.exe filter=lfs diff=lfs merge=lfs -text
 C:/Users/parth/OneDrive/Desktop/InClass[[:space:]]-[[:space:]]Copy/node_modules filter=lfs diff=lfs merge=lfs -text
+C:/Users/parth/OneDrive/Desktop/InClass[[:space:]]-[[:space:]]Copy/node_modules filter=lfs diff=lfs merge=lfs -text
